Changes for 2.2.7rc1

New features:
A.F....... [ZBX-1357] updated Chinese (Taiwan) and Polish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8659] fixed graphs in screens not respecting "Show legend" setting when in dynamic mode (Krists)
.......... [ZBX-8679] removed outdated and unused images (Richlv)
..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)
A.F....... [ZBX-8650] fixed undefined index in user.get method when using 'search' option, removed redundant code in CUserMedia class and corrected user link in user groups page (Ivo)
..F....... [ZBX-8701] fixed disabled web scenarios being displayed in the web monitoring widget (Pavels)
..F....... [ZBX-3407] fixed NVPS query to not fail on DB2 (Krists)
...G...... [ZBX-8646] added a warning on UNIX/GNU/Linux platforms if logrt[] directory has no 'execute' permission (Andris)
........S. [ZBX-8541] fixed queue calculation when hosts with active items return from no data maintenance (asaveljevs)
........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)
..F....... [ZBX-8616] fixed link to host items in Inventory->Hosts host view (Krists)

--------------------------------------------------------------------------------
Changes for 2.2.6

New features:
A.F....... [ZBX-1357] updated Chinese (Taiwan) and Polish translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.2.6rc1

New features:
..F....... [ZBX-8275] implemented web scenario cloning (Ivo)
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)